--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "hesto/multi-auth": "^2.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "symfony/console": "4.3.4",
-        "laravelcollective/html": "~5.0"
+        "laravelcollective/html": "~5.0",
+        "maatwebsite/excel": "^3.1",
+        "symfony/console": "4.3.4"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -34,7 +36,7 @@
             "dont-discover": []
         }
     },
-    "autoload": {
+    "autoload": { 
         "psr-4": {
             "App\\": "app/"
         },
