--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "~5.0",
-        "maatwebsite/excel": "^3.1",
+        "maatwebsite/excel": "~2.1.3",
         "symfony/console": "4.3.4"
     },
     "require-dev": {
